--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
       <div class="left-footer">
         <h2 class="title-footer">loopstudios</h1>
         <ul class="nav-footer">
-          <li><a href="#" class="link-nav">About</a></li>
-          <li><a href="#" class="link-nav">Careers</a></li>
-          <li><a href="#" class="link-nav">Events</a></li>
-          <li><a href="#" class="link-nav">Products</a></li>
-          <li><a href="#" class="link-nav">Support</a></li>
+          <li><a href="#" class="linknav">About</a></li>
+          <li><a href="#" class="linknav">Careers</a></li>
+          <li><a href="#" class="linknav">Events</a></li>
+          <li><a href="#" class="linknav">Products</a></li>
+          <li><a href="#" class="linknav">Support</a></li>
         </ul>
       </div>
       <div class="right-footer">
         <div class="social-media">
-          <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
-          <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
-          <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
-          <a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a>
+          <a href="#"><img src="./images/icon-facebook.svg" alt="facebook" class="linknav"></a>
+          <a href="#"><img src="./images/icon-twitter.svg" alt="twitter" class="linknav"></a>
+          <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest" class="linknav"></a>
+          <a href="#"><img src="./images/icon-instagram.svg" alt="instagram" class="linknav"></a>
         </div>
         <div class="copyright">
           © 2021 Loopstudios. All rights reserved.
